--- a/index.css
+++ b/index.css
@@ -18,14 +18,9 @@ html,body,h1,h2,h3,h4 {
 }
 
 .navbar {
-overflow: hidden;
+  overflow: hidden;
   background-color: #dad7cd;
-  padding: 30px 10px; /* Large padding which will shrink on scroll (using JS) */
-  transition: 0.4s; /* Adds a transition effect when the padding is decreased */
-  position: fixed; /* Sticky/fixed navbar */
-  width: 100%;
-  top: 0; /* At the top */
-  z-index: 99;
+
 }
 
 .navbar .logo {
@@ -35,13 +30,15 @@ overflow: hidden;
   }
 .navbar a {
     float: left;
+    display: block;
     color: black;
-    text-align: center;
-    padding: 12px;
+    text-align: center; 
     text-decoration: none;
     font-size: 18px;
     line-height: 25px;
-    border-radius: 4px;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
 .navbar a:hover {
@@ -55,8 +52,9 @@ overflow: hidden;
     float: right;
 }
 
+
 @media screen and (max-width: 580px) {
-    avbar {
+    .navbar {
       padding: 20px 10px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
     }
     .navbar a {
